--- a/monopoly-go-card-tracker/public/index.html
+++ b/monopoly-go-card-tracker/public/index.html
@@ -9,7 +9,7 @@
       name="Monopoly Card Tracking Web Application"
       content="This Web App was created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Monopoly_Go_icon.webp" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
